src/test/deca/context/invalid/tests/SignNotExpectedMthodCall2.deca
// Description:
//       Teste de signature non prévu de la method call.
// 
// Resultats: 
//      Ligne 16: Signature de methode non prévu
// 
// Historique:
//      cree le 21/01/2023
class A{
  void mthod(int x, int y){
  }
}

{
  A a = new A();
  a.mthod(1, 2.5);
}
